--- a/src/package.json
+++ b/src/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "@espruino-tools/device-controller": "^2.1.0",
     "@espruino-tools/peer": "^1.2.1",
+    "aruco-marker": "^2.0.0",
     "file-loader": "^6.2.0",
+    "js-aruco": "^0.1.0",
+    "jstracking": "^0.0.3",
     "nipplejs": "^0.10.0",
     "piecewise-function": "^1.0.0",
     "tracking": "^1.1.3",
