--- a/src/azure-build-check-pipeline.yml
+++ b/src/azure-build-check-pipeline.yml
@@ -18,8 +18,5 @@ steps:
 - script: |
     cd src
     npm install
-  displayName: 'npm install'
-
-- script: |
     npm run build
-  displayName: 'npm build'
+  displayName: 'npm install and build'
