--- a/azure-build-check-pipeline.yml
+++ b/azure-build-check-pipeline.yml
@@ -1,7 +1,4 @@
-# Node.js
 # Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
 - develop
@@ -16,9 +13,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    cd src
     npm install
-  displayName: 'npm install'
-
-- script: |
     npm run build
-  displayName: 'npm build'
+  displayName: 'npm install and build'
