--- a/azure-build-check-pipeline.yml
+++ b/azure-build-check-pipeline.yml
@@ -15,6 +15,6 @@ steps:
 - script: |
     cd src
     npm install
-    npm install 'espruino-tools/core'
+    npm install '@espruino-tools/core'
     npm run build
   displayName: 'npm install and build'
