--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: "10.x"
       - run: cd src
       - run: npm install
-      - run: npm run build
+      - run: cd src && npm run build
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
