--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "10.x"
-      - run: cd src
-      - run: npm install
-      - run: cd src && npm run build
+      - run: cd src && npm install && npm run build
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
