--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "10.x"
-      - run: cd src && npm install && npm run build
+      - run: cd src && npm install && npm install '@espruino-tools/core' && npm run build
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
