--- a/src/package.json
+++ b/src/package.json
@@ -31,11 +31,14 @@
     "@espruino-tools/peer": "^1.2.1",
     "aruco-marker": "^2.0.0",
     "file-loader": "^6.2.0",
+    "gl-matrix": "^3.4.3",
     "js-aruco": "^0.1.0",
+    "jsqr": "^1.4.0",
     "jstracking": "^0.0.3",
     "nipplejs": "^0.10.0",
     "piecewise-function": "^1.0.0",
     "tracking": "^1.1.3",
-    "tracking.js": "^0.1.1"
+    "tracking.js": "^0.1.1",
+    "uart": "^1.0.1"
   }
 }
